--- a/ui/artical-one.html
+++ b/ui/artical-one.html
@@ -1,1 +1,25 @@
+<html>
+<head>
+<title>
+    vikas narhare | panitings
+</title>    
+</head>
+<body>
+  <div>
+      <a href="/">home</a>
+  </div>  
+         <hr/>
+    <h3>
+        Painting one
+    </h3>
+  <div>
+        Aug 26 2017 
+  </div>
+  <div>
+        <p>
+            This is my painting, hope you like it.
+        </p>    
+  </div>
+</body>   
+</html>
 
