[imad-console] Updates ui/artical-one.html

--- a/ui/artical-one.html
+++ b/ui/artical-one.html
@@ -1,5 +1,10 @@
 <html>
 <head>
+<style>
+    body {
+    background-image: url("https://www.facebook.com/photo.php?fbid=719323704893728&set=rpd.100004483158603&type=3&theater");
+}
+</style>    
 <title>
     vikas narhare | panitings
 </title>    
@@ -9,15 +14,15 @@
       <a href="/">home</a>
   </div>  
          <hr/>
-    <h3>
-        Painting one
-    </h3>
+    <h1>
+        painting one 
+    </h1>
   <div>
         Aug 26 2017 
   </div>
   <div>
         <p>
-            This is my painting, hope you like it.
+            Hello World! do you like my background painting. This is my painting, hope you like it.
         </p>    
   </div>
 </body>   
