[imad-console] Updates ui/artical-one.html

--- a/ui/artical-one.html
+++ b/ui/artical-one.html
@@ -1,14 +1,17 @@
 <html>
 <head>
 <style>
-    body {
+div {
     max-width: 500px;
-    height: 100px   
+    height: 100px;
+    background-image: url("https://scontent.fpnq1-1.fna.fbcdn.net/v/t1.0-9/16426157_719323704893728_7779812856988700546_n.jpg?oh=8f987bb9eef1f4dab3cb7c5f5404d7c7&oe=5A2E8BAD");
+}
+
+    body {
     background-image: url("https://scontent.fpnq1-1.fna.fbcdn.net/v/t1.0-9/16426157_719323704893728_7779812856988700546_n.jpg?oh=8f987bb9eef1f4dab3cb7c5f5404d7c7&oe=5A2E8BAD");
     background-repeat: no-repeat;
     background-position: right top;
     margin-right: 668 x 457;
-}
 }
 </style>    
 <title>
