[imad-console] Updates ui/artical-two.html

--- a/ui/artical-two.html
+++ b/ui/artical-two.html
@@ -2,7 +2,7 @@
 <head>
 <style>
     body {
-    background-image: url("https://www.facebook.com/photo.php?fbid=722962471196518&set=rpd.100004483158603&type=3&theater");
+    background-image: url("https://www.facebook.com/photo.php?fbid=722962471196518&set=rpd.100004483158603&type=3&theater.png");
     background-repeat: no-repeat;
     background-position: right top;
     margin-right: 668 x 457;
