--- a/ui/artical-one.html
+++ b/ui/artical-one.html
@@ -2,10 +2,13 @@
 <head>
 <style>
     .container{
-        max-width: 800px;
-        margin: 0 auto;
-        color: grey;
-        font-family: sanserif; 
+            max-width: 800px;
+            margin: 0 auto;
+            color: #030303;
+            font-family: sanserif;
+            padding-top: 60px;
+            padding-left: 20pc;
+            padding-right: 20px;
     }
     body {
     background-image: url("https://scontent.fpnq1-1.fna.fbcdn.net/v/t1.0-9/16426157_719323704893728_7779812856988700546_n.jpg?oh=8f987bb9eef1f4dab3cb7c5f5404d7c7&oe=5A2E8BAD");
