[imad-console] Updates ui/artical-two.html

--- a/ui/artical-two.html
+++ b/ui/artical-two.html
@@ -14,6 +14,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <div class="container">
   <div>
       <a href="/">home</a>
   </div>  
@@ -28,6 +29,7 @@
         <p>
             Hello World! do you like my background painting. This is my painting, hope you like it.
         </p>    
+  </div>
   </div>
 </body>   
 
