--- a/ui/artical-two.html
+++ b/ui/artical-two.html
@@ -1,6 +1,16 @@
 <html>
 <head>
 <style>
+     .container{
+            max-width: 800px;
+            margin: 0 auto;
+            color: #030303;
+            font-family: sanserif;
+            padding-top: 60px;
+            padding-left: 20pc;
+            padding-right: 20px;
+    }
+    
     body {
     background-image: url("https://scontent.fpnq1-1.fna.fbcdn.net/v/t1.0-9/16708516_722962471196518_341053957706971691_n.jpg?oh=0b7cdbad950ec61a6da88b874400281a&oe=5A166A4F");
     background-repeat: no-repeat;
