--- a/ui/artical-three.html
+++ b/ui/artical-three.html
@@ -1,6 +1,16 @@
 <html>
 <head>
 <style>
+    .container{
+            max-width: 800px;
+            margin: 0 auto;
+            color: #030303;
+            font-family: sanserif;
+            padding-top: 60px;
+            padding-left: 20pc;
+            padding-right: 20px;
+    }
+    
     body {
     background-image: url("https://scontent.fpnq1-1.fna.fbcdn.net/v/t1.0-9/16681774_727523117407120_8316018562051690770_n.jpg?oh=c99a4e0288598c02c819bbf064fee2cd&oe=5A2C8CE9");
     background-repeat: no-repeat;
