[imad-console] Updates ui/artical-three.html

--- a/ui/artical-three.html
+++ b/ui/artical-three.html
@@ -14,7 +14,7 @@
     body {
     background-image: url("https://scontent.fpnq1-1.fna.fbcdn.net/v/t1.0-9/16681774_727523117407120_8316018562051690770_n.jpg?oh=c99a4e0288598c02c819bbf064fee2cd&oe=5A2C8CE9");
     background-repeat: no-repeat;
-    background-position: right top;
+    background-position: center bottom;
     margin-right: 668 x 457;
 }
 </style>    
