[imad-console] Updates ui/artical-one.html

--- a/ui/artical-one.html
+++ b/ui/artical-one.html
@@ -4,7 +4,7 @@
     .container{
             max-width: 800px;
             margin: 0 auto;
-            color: #030303;
+            color: #121111;;
             font-family: sanserif;
             padding-top: 60px;
             padding-left: 20pc;
