[imad-console] Updates ui/artical-two.html

--- a/ui/artical-two.html
+++ b/ui/artical-two.html
@@ -7,8 +7,8 @@
             color: #030303;
             font-family: sanserif;
             padding-top: 60px;
-            padding-left: 20pc;
-            padding-right: 20px;
+            padding-left: 50px;
+            padding-right: 50px;
     }
     
     body {
