[imad-console] Updates ui/artical-one.html

--- a/ui/artical-one.html
+++ b/ui/artical-one.html
@@ -1,25 +1,19 @@
 <html>
 <head>
-<style>
-    .container{
-            max-width: 800px;
-            margin: 0 auto;
-            color: #121111;;
-            font-family: sanserif;
-            padding-top: 60px;
-            padding-left: 20pc;
-            padding-right: 20px;
-    }
-    body {
-    background-image: url("https://scontent.fpnq1-1.fna.fbcdn.net/v/t1.0-9/16426157_719323704893728_7779812856988700546_n.jpg?oh=8f987bb9eef1f4dab3cb7c5f5404d7c7&oe=5A2E8BAD");
+<style> 
+ body {
+    background-image: url("https://scontent.fpnq1-1.fna.fbcdn.net/v/t1.0-9/16708516_722962471196518_341053957706971691_n.jpg?oh=0b7cdbad950ec61a6da88b874400281a&oe=5A166A4F");
     background-repeat: no-repeat;
     background-position: center bottom;
     margin-right: 668 x 457;
-}
+}    
+
 </style>    
 <title>
     vikas narhare | panitings
-</title>    
+</title> 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link href="/ui/style.css" rel="stylesheet" />
 </head>
 <body>
     <div class="container">
