[imad-console] Updates ui/artical-three.html

--- a/ui/artical-three.html
+++ b/ui/artical-three.html
@@ -1,16 +1,6 @@
 <html>
 <head>
 <style>
-    .container{
-            max-width: 800px;
-            margin: 0 auto;
-            color: #030303;
-            font-family: sanserif;
-            padding-top: 60px;
-            padding-left: 50px;
-            padding-right: 50px;
-    }
-    
     body {
     background-image: url("https://scontent.fpnq1-1.fna.fbcdn.net/v/t1.0-9/16681774_727523117407120_8316018562051690770_n.jpg?oh=c99a4e0288598c02c819bbf064fee2cd&oe=5A2C8CE9");
     background-repeat: no-repeat;
@@ -22,6 +12,7 @@
     vikas narhare | panitings
 </title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link href="/ui/style.css" rel="stylesheet" />
 </head>
 <body>
     <div class="container">
