[imad-console] Updates ui/artical-two.html

--- a/ui/artical-two.html
+++ b/ui/artical-two.html
@@ -1,17 +1,8 @@
 <html>
 <head>
 <style>
-     .container{
-            max-width: 800px;
-            margin: 0 auto;
-            color: #030303;
-            font-family: sanserif;
-            padding-top: 60px;
-            padding-left: 50px;
-            padding-right: 50px;
-    }
-    
-    body {
+   
+      body {
     background-image: url("https://scontent.fpnq1-1.fna.fbcdn.net/v/t1.0-9/16708516_722962471196518_341053957706971691_n.jpg?oh=0b7cdbad950ec61a6da88b874400281a&oe=5A166A4F");
     background-repeat: no-repeat;
     background-position: center bottom;
@@ -22,6 +13,7 @@
     vikas narhare | panitings
 </title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link href="/ui/style.css" rel="stylesheet" />
 </head>
 <body>
     <div class="container">
